log
Wed 24 Apr 2024 06:29:35 PM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
0d32f42
Wed 24 Apr 2024 06:32:06 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
0de5a77
Wed 24 Apr 2024 06:42:38 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
ceaa182
Thu 25 Apr 2024 12:53:52 AM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:10: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   51 |    Pair* nuevo = createPair(key,value);
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d2c1afe
Thu 25 Apr 2024 12:54:22 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   51 |     Pair* nuevo = createPair(key,value);
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
eab86cd
Thu 25 Apr 2024 12:55:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
ec9eaf2
Thu 25 Apr 2024 01:01:40 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
97823cf
Thu 25 Apr 2024 01:03:19 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|1
total_score: 60/70
83e410f
Thu 25 Apr 2024 01:03:33 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9f8c1f4
Thu 25 Apr 2024 01:05:56 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  14|1
total_score: 60/70
d23f939
Thu 25 Apr 2024 01:06:51 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:125:84: error: expected ‘)’ before ‘{’ token
  125 |       if(map->buckets[map->current]!=NULL && map->buckets[map->current]->key!=NULL {
      |         ~                                                                          ^
hashmap.c:129:5: error: expected expression before ‘}’ token
  129 |     }
      |     ^
Compilation failed
d244877
Thu 25 Apr 2024 01:08:19 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:126:84: error: expected ‘)’ before ‘{’ token
  126 |       if(map->buckets[map->current]!=NULL && map->buckets[map->current]->key!=NULL {
      |         ~                                                                          ^
hashmap.c:132:5: error: expected expression before ‘}’ token
  132 |     }
      |     ^
Compilation failed
42c22a7
Thu 25 Apr 2024 01:09:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:126:84: error: expected ‘)’ before ‘{’ token
  126 |       if(map->buckets[map->current]!=NULL && map->buckets[map->current]->key!=NULL {
      |         ~                                                                          ^
hashmap.c:132:5: error: expected expression before ‘}’ token
  132 |     }
      |     ^
hashmap.c:133:12: error: ‘bucket’ undeclared (first use in this function)
  133 |     return bucket[2]->value;
      |            ^~~~~~
hashmap.c:133:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cacac1f
Thu 25 Apr 2024 01:10:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:127:84: error: expected ‘)’ before ‘{’ token
  127 |       if(map->buckets[map->current]!=NULL && map->buckets[map->current]->key!=NULL {
      |         ~                                                                          ^
hashmap.c:133:5: error: expected expression before ‘}’ token
  133 |     }
      |     ^
Compilation failed
dc38d47
Thu 25 Apr 2024 01:12:21 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:128:32: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
  128 |         return map->buckets[map->value];
      |                                ^~
Compilation failed
9870f67
Thu 25 Apr 2024 01:12:32 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db890c1
Thu 25 Apr 2024 01:15:08 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
fa14413
